# webrtc-apis

./: .gitignore  LICENSE  README.md
windows/: BUILD.gn
windows/wrapper/: Org.WebRtc.Glue.events.json  impl_org_webRtc.cpp  impl_org_webRtc.h  impl_org_webRtc_AudioBuffer.cpp  impl_org_webRtc_AudioBuffer.h  impl_org_webRtc_AudioBufferConfiguration.cpp  impl_org_webRtc_AudioBufferConfiguration.h  impl_org_webRtc_AudioBufferEvent.cpp  impl_org_webRtc_AudioBufferEvent.h  impl_org_webRtc_AudioData.cpp  impl_org_webRtc_AudioData.h  impl_org_webRtc_AudioFrame.cpp  impl_org_webRtc_AudioFrame.h  impl_org_webRtc_AudioOptions.cpp  impl_org_webRtc_AudioProcessingInitializeEvent.cpp  impl_org_webRtc_AudioProcessingInitializeEvent.h  impl_org_webRtc_AudioProcessingRuntimeSettingEvent.cpp  impl_org_webRtc_AudioProcessingRuntimeSettingEvent.h  impl_org_webRtc_AudioTrackSource.cpp  impl_org_webRtc_AudioTrackSource.h  impl_org_webRtc_Constraint.h  impl_org_webRtc_CustomAudioDevice.cpp  impl_org_webRtc_CustomAudioDevice.h  impl_org_webRtc_CustomAudioDeviceParameters.cpp  impl_org_webRtc_CustomAudioDeviceParameters.h  impl_org_webRtc_CustomAudioDeviceRequestStateEvent.cpp  impl_org_webRtc_CustomAudioDeviceRequestStateEvent.h  impl_org_webRtc_CustomAudioDeviceRequestStereoEvent.cpp  impl_org_webRtc_CustomAudioDeviceRequestStereoEvent.h  impl_org_webRtc_CustomAudioDeviceSelectEvent.cpp  impl_org_webRtc_CustomAudioDeviceSelectEvent.h  impl_org_webRtc_CustomAudioMixerRequestMute.cpp  impl_org_webRtc_CustomAudioMixerRequestMute.h  impl_org_webRtc_CustomAudioMixerRequestMuteEvent.cpp  impl_org_webRtc_CustomAudioMixerRequestMuteEvent.h  impl_org_webRtc_CustomAudioMixerRequestSettings.cpp  impl_org_webRtc_CustomAudioMixerRequestSettings.h  impl_org_webRtc_CustomAudioMixerRequestSettingsEvent.cpp  impl_org_webRtc_CustomAudioMixerRequestSettingsEvent.h  impl_org_webRtc_CustomAudioMixerRequestStateEvent.cpp  (+214 more)
windows/wrapper/override/: org_webRtc_AudioData.h  org_webRtc_EventQueue.h  org_webRtc_MediaSample.h  org_webRtc_MediaSource.h  org_webRtc_VideoData.h  org_webRtc_VideoDeviceInfo.h
windows/wrapper/override/c/: c_helper_throwers.cpp  c_org_webRtc_AudioData.cpp  c_org_webRtc_AudioData.h  c_org_webRtc_EventQueueMaker.cpp  c_org_webRtc_EventQueueMaker.h  c_org_webRtc_MediaElement.cpp  c_org_webRtc_MediaElement.h  c_org_webRtc_MediaElementMaker.cpp  c_org_webRtc_MediaElementMaker.h  c_org_webRtc_MediaSample.cpp  c_org_webRtc_MediaSample.h  c_org_webRtc_MediaSource.cpp  c_org_webRtc_MediaSource.h  c_org_webRtc_VideoData.cpp  c_org_webRtc_VideoData.h  c_org_webRtc_VideoDeviceInfo.cpp  c_org_webRtc_VideoDeviceInfo.h
windows/wrapper/override/cppwinrt/: AudioData.cpp  AudioData.h  EventQueue.cpp  EventQueue.h  EventQueueMaker.cpp  EventQueueMaker.h  MediaElement.h  MediaElementMaker.h  MediaSample.cpp  (+6 more)
(+44 files in other folders)
