# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/idl/zsLib-eventing/zslib_eventing_tool.gni")

group("webrtc_wrappers") {
    public_deps = [
      "//third_party/idl:idl"
    ]
}

compile_idl_macro("webrtc_idl") {
  
  sources = [
    "../idl/config.json",
  ]

  idlOutputPath = "../windows"
  idlAlreadyCompletedFlag =  "webrtcIdlCompiledFlag.flg"
}

compile_single_event_macro("webrtc_wrapper_events") {
  
  sources = [
    "wrapper/Org.WebRtc.Glue.events.json",
  ]
  
  idlOutputPath = "."
  idlAlreadyCompletedFlag =  "Org.WebRtc.Glue_eventsCompiled.flg"
    
}
